apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  type: ClusterIP
  selector:
    app: linkding
  ports:
    - port: 9090
      targetPort: 9090
